<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/account"
            android:icon="@drawable/mic_account"
            android:title="@string/my_account" />

        <item
            android:id="@+id/documents"
            android:icon="@drawable/doc_solid"
            android:title="@string/documents" />

        <item
            android:id="@+id/my_services"
            android:icon="@drawable/ic_myservices"
            android:title="@string/my_service" />

        <item
            android:id="@+id/invite_cart"
            android:icon="@drawable/ic_jobs"
            android:title="@string/job" />

        <!--<item
            android:id="@+id/payment_cart"
            android:icon="@drawable/ic_pay"
            android:title="@string/pay" />
-->
        <!-- <item
             android:id="@+id/offers"
             android:icon="@drawable/ic_offers"
             android:title="@string/offers" />-->


        <!--    <item
                android:id="@+id/share"
                android:icon="@drawable/ic_referral"
                android:title="@string/share" />-->


        <!-- <item
             android:id="@+id/on_going"
             android:icon="@drawable/ic_directions_run_black_24dp"
             android:title="@string/running_jobs" />
         <item
             android:id="@+id/job_history"
             android:icon="@drawable/ic_history_black_24dp"
             android:title="@string/job_history" />-->


        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />

        <item
            android:id="@+id/action_register"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/register" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/mic_logout"
            android:title="@string/logout" />

    </group>

</menu>