<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_select_location_whwre_your_want_to_take_service"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <CheckBox
                android:id="@+id/cbCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_my_current_location" />

            <TextView
                android:id="@+id/tvSelectLocation"
                style="@style/EditTextTheam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/select_your_location"
                android:maxLines="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btCancel"
                    style="@style/ButtonTheam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:background="@color/grey"
                    android:text="@string/cancel"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btOk"
                    style="@style/ButtonTheam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/button_bg"
                    android:text="@string/ok"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>