<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="@dimen/dp_5"
    app:cardElevation="@dimen/dp_3"
    android:divider="@color/grey"
    android:dividerHeight="1dp">

<LinearLayout
    android:background="?android:attr/selectableItemBackground"            android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivProfile"
        android:contentDescription="@string/app_name"
        android:src="@drawable/user"
        android:padding="@dimen/dp_5"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80" />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvUserName"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/no_of_job_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
            <TextView
            android:textColor="@android:color/black"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:text="@string/comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvNoOfJobDone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:text="@string/servicetype"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:text="@string/comma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvServiceType"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:text="@string/plumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>
</layout>