<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/dp_10"
        android:background="@drawable/bg_dialog"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/enter_amount_that_you_discuss_with_employee_to_pay_for_this_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:padding="@dimen/dp_20"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etEnterPrice"
                android:hint="@string/enter_ammount"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                style="@style/EditTextTheam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btOk"
                    android:text="@string/done"
                    style="@style/ButtonTheam"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>