<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <view
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_x="0dip"
        android:layout_y="0dip"
        class="com.calltechservice.cropimage.CropImageView"
        android:background="#55000000" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginBottom="@dimen/sp_10"
        android:paddingRight="@dimen/dp_10" >

        <Button
            android:id="@+id/discard"
            style="@style/ButtonTheam"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:maxLines="1"
            android:text="@string/cam_cancel" />

        <ImageButton
            android:id="@+id/rotateLeft"
            android:contentDescription="@string/app_name"
            style="@style/ButtonTheam"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/discard"
            android:src="@drawable/ic_rotate_left" />

        <ImageButton
            android:id="@+id/rotateRight"
            android:contentDescription="@string/app_name"
            style="@style/ButtonTheam"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/rotateLeft"
            android:src="@drawable/ic_rotate_right" />

        <Button
            android:id="@+id/save"
            style="@style/ButtonTheam"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/rotateRight"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>